docs-swagger: add customer-service
